...
    <string name="del_plst_body">Do you really want to delete playlist?</string>
    <string name="canc_str">Cancel</string>
    <string name="text_not_found">Sorry, we can\'t find text</string>
    <string name="track">Track</string>
    <string name="playlist">Playlist</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="title">Title</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="add">add</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="new_playlist">New playlist</string>
    <string name="home">License</string>
    <string name="find_track_lyrics">Find track lyrics</string>
...
