...
            artistTitleBinding="@{mainViewModel.currentTrackPlaying}"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/albumImage"
            />

        <TextView
            android:id="@+id/albumTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            albumTitleBinding="@{mainViewModel.currentTrackPlaying}"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/artistTitle"
            />

        <!-- Song Title -->
        <TextView
            android:id="@+id/songTitleMove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            trackTitleBinding="@{mainViewModel.currentTrackPlaying}"
            android:textSize="16sp"
...
