...
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/add_files_butt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginRight="24dp"
                android:onClick="@{() -> playlistViewModel.addButtonClicked()}"
...
